--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.0.3
 tensorflow==2.15.0
-numpy==1.19.5
+numpy
 pandas==1.3.3
-keras==2.6.0
 gunicorn==20.1.0
 streamlit
+joblib
+scikit-learn
